[package]
name = "monomo"
version = "0.1.2"
edition = "2021"
authors = ["Arkadiusz Zylkowski <arkadiuszzylkowski@gmail.com>"]
include = ["/Cargo.toml", "/LICENSE-MIT", "/src/**"]
description = "Explicit trait monomorphization"
readme = "README.md"
license = "MIT"
repository = "https://github.com/zylkowski/monomo"

[dependencies]
monomo_macros = "0.1.0"